--- a/xpdc/JavaSource/com/sma/report/report_tagihan_det.jrxml
+++ b/xpdc/JavaSource/com/sma/report/report_tagihan_det.jrxml
@@ -31,28 +31,34 @@ ORDER BY ad.urut
 	</title>
 	<detail>
 		<band height="33">
-			<textField>
+			<textField hyperlinkType="None">
 				<reportElement x="0" y="1" width="44" height="16"/>
 				<box>
 					<pen lineWidth="0.0" lineStyle="Solid"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font pdfFontName="Helvetica"/>
+				</textElement>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{colly_detail}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField hyperlinkType="None">
 				<reportElement x="44" y="1" width="215" height="16"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
 				</box>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{nama_barang}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.##">
+			<textField pattern="#,##0.##" hyperlinkType="None">
 				<reportElement x="282" y="1" width="105" height="16"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font pdfFontName="Helvetica"/>
+				</textElement>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{tot_harga}]]></textFieldExpression>
 			</textField>
 			<staticText>
@@ -61,21 +67,21 @@ ORDER BY ad.urut
 					<pen lineWidth="0.0" lineStyle="Solid"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="false"/>
+					<font fontName="Arial" size="11" isBold="false" pdfFontName="Helvetica"/>
 				</textElement>
 				<text><![CDATA[Rp.]]></text>
 			</staticText>
-			<textField>
+			<textField hyperlinkType="None">
 				<reportElement x="44" y="17" width="215" height="16"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
 				</box>
-				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["( " + $F{qty_detail} + " " + $F{satuan} + " x Rp. " + $P{REPORT_SCRIPTLET}.formatNumber($F{harga_detail}) + " )"
-
-]]></textFieldExpression>
+				<textElement verticalAlignment="Middle" markup="none">
+					<font pdfFontName="Helvetica"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["( " + $F{qty_detail} + " " + $F{satuan} + " x Rp. " + $P{REPORT_SCRIPTLET}.formatNumber($F{harga_detail}) + " )"]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
+			<textField isBlankWhenNull="true" hyperlinkType="None">
 				<reportElement x="0" y="17" width="44" height="16"/>
 				<box>
 					<pen lineWidth="0.0" lineStyle="Solid"/>
@@ -83,7 +89,7 @@ ORDER BY ad.urut
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
+			<textField isBlankWhenNull="true" hyperlinkType="None">
 				<reportElement x="259" y="17" width="128" height="16"/>
 				<box>
 					<pen lineWidth="0.0" lineStyle="Solid"/>
