update pada print html

--- a/xpdc/JavaSource/com/sma/report/print_rincian_barang_biaya.jrxml
+++ b/xpdc/JavaSource/com/sma/report/print_rincian_barang_biaya.jrxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created using JasperAssistant (http://www.jasperassistant.com) -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="print_rincian_barang_biaya" pageWidth="612" pageHeight="791" columnWidth="612" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" scriptletClass="com.sma.utils.JasperScriptlet">
+<!-- Created with Jaspersoft Studio version 4.5.0-->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="print_rincian_barang_biaya" pageWidth="307" pageHeight="100" columnWidth="307" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" scriptletClass="com.sma.utils.JasperScriptlet">
 	<property name="com.jasperassistant.designer.Grid" value="false"/>
 	<property name="com.jasperassistant.designer.SnapToGrid" value="false"/>
 	<property name="com.jasperassistant.designer.GridWidth" value="12"/>
 	<property name="com.jasperassistant.designer.GridHeight" value="12"/>
 	<property name="com.jasperassistant.designer.DataSource" value="xpdc"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySql Ekspedisi"/>
 	<parameter name="delivery_id" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[new Integer(20)]]></defaultValueExpression>
 	</parameter>
@@ -30,7 +40,7 @@ ORDER BY b.nama
 	</title>
 	<detail>
 		<band height="17">
-			<textField hyperlinkType="None">
+			<textField>
 				<reportElement positionType="Float" x="0" y="1" width="115" height="16"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
@@ -38,9 +48,9 @@ ORDER BY b.nama
 				<textElement verticalAlignment="Middle">
 					<font pdfFontName="Helvetica"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{namabiaya}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{namabiaya}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.##" hyperlinkType="None">
+			<textField pattern="#,##0.##">
 				<reportElement positionType="Float" x="138" y="1" width="78" height="16"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
@@ -48,7 +58,7 @@ ORDER BY b.nama
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font pdfFontName="Helvetica"/>
 				</textElement>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{nominal}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nominal}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement positionType="Float" x="115" y="1" width="23" height="16"/>
@@ -61,9 +71,10 @@ ORDER BY b.nama
 				<text><![CDATA[Rp.]]></text>
 			</staticText>
 			<textField>
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="220" y="1" width="152" height="16"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="216" y="1" width="91" height="16"/>
+				<box leftPadding="6"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{note}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{note}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -71,20 +82,20 @@ ORDER BY b.nama
 		<band/>
 	</pageFooter>
 	<summary>
-		<band height="20">
-			<line>
-				<reportElement x="114" y="2" width="104" height="1"/>
-			</line>
+		<band height="17">
 			<textField pattern="#,##0.##">
-				<reportElement x="138" y="4" width="78" height="16"/>
-				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="2"/>
+				<reportElement x="138" y="0" width="78" height="16"/>
+				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="2">
+					<topPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{tot_nominal}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{tot_nominal}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement positionType="Float" x="116" y="4" width="23" height="16"/>
+				<reportElement positionType="Float" x="115" y="0" width="23" height="16"/>
 				<box topPadding="0" leftPadding="1" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
+					<topPen lineWidth="1.0"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="11" isBold="false" pdfFontName="Helvetica"/>
