--- a/xpdc/JavaSource/com/sma/report/report_stt.jrxml
+++ b/xpdc/JavaSource/com/sma/report/report_stt.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created using JasperAssistant (http://www.jasperassistant.com) -->
+<!-- Created with Jaspersoft Studio version 4.5.0-->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report_stt" pageWidth="1200" pageHeight="842" columnWidth="1160" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30">
 	<property name="com.jasperassistant.designer.DataSource" value="xpdc"/>
 	<property name="com.jasperassistant.designer.Grid" value="false"/>
@@ -9,18 +9,20 @@
 	<property name="com.jasperassistant.designer.Margins" value="true"/>
 	<property name="com.jasperassistant.designer.Rulers" value="true"/>
 	<property name="com.jasperassistant.designer.SnapToGuides" value="true"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySql Ekspedisi"/>
 	<parameter name="beg_date" class="java.lang.String"/>
 	<parameter name="end_date" class="java.lang.String"/>
 	<parameter name="username" class="java.lang.String"/>
 	<parameter name="param" class="java.lang.String">
 		<defaultValueExpression><![CDATA[""]]></defaultValueExpression>
 	</parameter>
-	<queryString>
+	<queryString language="SQL">
 		<![CDATA[SELECT a.*, 
 c.keterangan cara_bayar, e.nama nama_customer, f.nama nama_cabang,
-u.nama userinput
+u.nama userinput, penerima.nama nama_penerima
 FROM mst_trans a 
 LEFT JOIN mst_customer e ON a.customer_id = e.id
+LEFT JOIN mst_customer penerima ON a.tujuan_id = penerima.id
 LEFT JOIN lst_cabang f ON a.cabang_id = f.id
 LEFT JOIN lst_config c ON a.pay_mode = c.jenis AND c.id = 1
 LEFT JOIN lst_user u ON a.createby = u.id
@@ -29,32 +31,88 @@ $P!{param}
 ORDER BY a.tgl_stt, a.no_stt
 ;]]>
 	</queryString>
-	<field name="alamat_tujuan" class="java.lang.String"/>
-	<field name="cabang_id" class="java.lang.Integer"/>
-	<field name="cancel" class="java.lang.Boolean"/>
-	<field name="cancelby" class="java.lang.Integer"/>
-	<field name="canceldate" class="java.sql.Timestamp"/>
+	<field name="alamat_tujuan" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="cabang_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="cancel" class="java.lang.Boolean">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="cancelby" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="canceldate" class="java.sql.Timestamp">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="cara_bayar" class="java.lang.String"/>
-	<field name="colly" class="java.math.BigDecimal"/>
-	<field name="contact_tujuan" class="java.lang.String"/>
-	<field name="createby" class="java.lang.Integer"/>
-	<field name="createdate" class="java.sql.Timestamp"/>
-	<field name="customer_id" class="java.lang.Integer"/>
-	<field name="id" class="java.lang.Integer"/>
-	<field name="modifyby" class="java.lang.Integer"/>
-	<field name="modifydate" class="java.sql.Timestamp"/>
+	<field name="colly" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[jumlah dalam colly]]></fieldDescription>
+	</field>
+	<field name="contact_tujuan" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="createby" class="java.lang.Integer">
+		<fieldDescription><![CDATA[User ID]]></fieldDescription>
+	</field>
+	<field name="createdate" class="java.sql.Timestamp">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="customer_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="modifyby" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="modifydate" class="java.sql.Timestamp">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="nama_cabang" class="java.lang.String"/>
 	<field name="nama_customer" class="java.lang.String"/>
-	<field name="no_stt" class="java.lang.String"/>
-	<field name="note" class="java.lang.String"/>
-	<field name="pay_mode" class="java.lang.Integer"/>
-	<field name="potongan" class="java.math.BigDecimal"/>
-	<field name="remain" class="java.math.BigDecimal"/>
-	<field name="telp_tujuan" class="java.lang.String"/>
-	<field name="tgl_kirim_est" class="java.util.Date"/>
-	<field name="tgl_stt" class="java.util.Date"/>
-	<field name="total_harga" class="java.math.BigDecimal"/>
+	<field name="no_stt" class="java.lang.String">
+		<fieldDescription><![CDATA[MMYY99999
+
+MM = bulan
+YY = tahun
+99999 = auto inc]]></fieldDescription>
+	</field>
+	<field name="note" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="pay_mode" class="java.lang.Integer">
+		<fieldDescription><![CDATA[cara bayar
+lst_config id1]]></fieldDescription>
+	</field>
+	<field name="potongan" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[potongan total]]></fieldDescription>
+	</field>
+	<field name="remain" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[default remain = total_harga - potongan
+akan berkurang seiring pada waktu pembayaran.
+
+nilai remain ini yg nantinya digunakan untuk laporan piutang]]></fieldDescription>
+	</field>
+	<field name="telp_tujuan" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="tgl_kirim_est" class="java.sql.Date">
+		<fieldDescription><![CDATA[tgl kirim estimasi]]></fieldDescription>
+	</field>
+	<field name="tgl_stt" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="total_harga" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[total harga dari harga di mst_trans_det]]></fieldDescription>
+	</field>
 	<field name="userinput" class="java.lang.String"/>
+	<field name="tujuan_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nama_penerima" class="java.lang.String"/>
 	<variable name="tot_colly" class="java.math.BigDecimal" calculation="Sum">
 		<variableExpression><![CDATA[$F{colly}]]></variableExpression>
 	</variable>
@@ -63,10 +121,10 @@ ORDER BY a.tgl_stt, a.no_stt
 	</variable>
 	<title>
 		<band height="80">
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="96" y="40" width="144" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{username}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{username}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="40" width="96" height="20"/>
@@ -78,30 +136,30 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Waktu:]]></text>
 			</staticText>
-			<textField pattern="dd-MMM-yyyy [HH:mm:ss]" isBlankWhenNull="true" hyperlinkType="None">
+			<textField pattern="dd-MMM-yyyy [HH:mm:ss]" isBlankWhenNull="true">
 				<reportElement x="96" y="60" width="144" height="20"/>
 				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[new Date()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="0" width="96" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Laporan:]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="96" y="0" width="265" height="20"/>
 				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Surat Tanda Terima (STT)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Surat Tanda Terima (STT)"]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="20" width="96" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Periode:]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="96" y="20" width="265" height="20"/>
 				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{beg_date} + " s/d " + $P{end_date}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{beg_date} + " s/d " + $P{end_date}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -180,7 +238,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Penerima]]></text>
+				<text><![CDATA[Nama Penerima]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="602" y="0" width="176" height="20"/>
@@ -239,65 +297,67 @@ ORDER BY a.tgl_stt, a.no_stt
 	<detail>
 		<band height="20">
 			<elementGroup/>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="31" y="0" width="100" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{no_stt}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{no_stt}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="0" y="0" width="31" height="20"/>
 				<box padding="3"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle" lineSpacing="Single" markup="none"/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="602" y="0" width="176" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{alamat_tujuan}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{alamat_tujuan}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="468" y="0" width="134" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{contact_tujuan}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_penerima}]]></textFieldExpression>
 			</textField>
-			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true" hyperlinkType="None">
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement x="131" y="0" width="81" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$F{tgl_stt}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tgl_stt}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="212" y="0" width="157" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{nama_customer}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_customer}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="369" y="0" width="99" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{cara_bayar}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{cara_bayar}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0" isBlankWhenNull="true" hyperlinkType="None">
+			<textField pattern="#,##0" isBlankWhenNull="true">
 				<reportElement x="778" y="0" width="70" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{colly}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{colly}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.00#" isBlankWhenNull="true" hyperlinkType="None">
+			<textField pattern="#,##0.00#" isBlankWhenNull="true">
 				<reportElement x="848" y="0" width="108" height="20"/>
 				<box padding="2">
 					<pen lineWidth="0.0" lineStyle="Solid"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{total_harga}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{total_harga}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="956" y="0" width="101" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{userinput}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{userinput}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<summary>
 		<band height="33">
-			<textField pattern="#,##0" hyperlinkType="None">
+			<textField pattern="#,##0">
 				<reportElement x="778" y="5" width="70" height="20"/>
 				<box>
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
@@ -308,9 +368,9 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{tot_colly}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{tot_colly}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.00#" hyperlinkType="None">
+			<textField pattern="#,##0.00#">
 				<reportElement x="848" y="5" width="108" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
@@ -321,7 +381,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{tot_harga}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{tot_harga}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="602" y="5" width="176" height="20"/>
