--- a/xpdc/JavaSource/com/sma/report/report_stt_det.jrxml
+++ b/xpdc/JavaSource/com/sma/report/report_stt_det.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created using JasperAssistant (http://www.jasperassistant.com) -->
+<!-- Created with Jaspersoft Studio version 4.5.0-->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report_stt_det" pageWidth="1200" pageHeight="842" columnWidth="1160" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30">
 	<property name="com.jasperassistant.designer.DataSource" value="xpdc"/>
 	<property name="com.jasperassistant.designer.Grid" value="false"/>
@@ -9,19 +9,21 @@
 	<property name="com.jasperassistant.designer.Margins" value="true"/>
 	<property name="com.jasperassistant.designer.Rulers" value="true"/>
 	<property name="com.jasperassistant.designer.SnapToGuides" value="true"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySql Ekspedisi"/>
 	<parameter name="beg_date" class="java.lang.String"/>
 	<parameter name="end_date" class="java.lang.String"/>
 	<parameter name="username" class="java.lang.String"/>
 	<parameter name="param" class="java.lang.String">
 		<defaultValueExpression><![CDATA[""]]></defaultValueExpression>
 	</parameter>
-	<queryString>
+	<queryString language="SQL">
 		<![CDATA[SELECT a.*, 
 b.urut, b.barang_id, b.nama_barang, b.satuan_id, b.qty, b.harga, b.colly col_det,
 c.keterangan cara_bayar, d.keterangan nama_satuan, e.nama nama_customer, f.nama nama_cabang,
-u.nama userinput
+u.nama userinput, penerima.nama nama_penerima
 FROM mst_trans a 
 LEFT JOIN mst_customer e ON a.customer_id = e.id
+LEFT JOIN mst_customer penerima ON a.tujuan_id = penerima.id
 LEFT JOIN lst_cabang f ON a.cabang_id = f.id
 LEFT JOIN lst_config c ON a.pay_mode = c.jenis AND c.id = 1
 LEFT JOIN lst_user u ON a.createby = u.id,
@@ -33,40 +35,109 @@ $P!{param}
 ORDER BY a.tgl_stt, a.no_stt
 ;]]>
 	</queryString>
-	<field name="alamat_tujuan" class="java.lang.String"/>
-	<field name="barang_id" class="java.lang.Integer"/>
-	<field name="cabang_id" class="java.lang.Integer"/>
-	<field name="cancel" class="java.lang.Boolean"/>
-	<field name="cancelby" class="java.lang.Integer"/>
-	<field name="canceldate" class="java.sql.Timestamp"/>
+	<field name="alamat_tujuan" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="barang_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[bisa diisi, bisa juga kosong, ini hanya sebagai alat bantu pencairan saja]]></fieldDescription>
+	</field>
+	<field name="cabang_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="cancel" class="java.lang.Boolean">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="cancelby" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="canceldate" class="java.sql.Timestamp">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="cara_bayar" class="java.lang.String"/>
 	<field name="col_det" class="java.math.BigDecimal"/>
-	<field name="colly" class="java.math.BigDecimal"/>
-	<field name="contact_tujuan" class="java.lang.String"/>
-	<field name="createby" class="java.lang.Integer"/>
-	<field name="createdate" class="java.sql.Timestamp"/>
-	<field name="customer_id" class="java.lang.Integer"/>
-	<field name="harga" class="java.math.BigDecimal"/>
-	<field name="id" class="java.lang.Integer"/>
-	<field name="modifyby" class="java.lang.Integer"/>
-	<field name="modifydate" class="java.sql.Timestamp"/>
-	<field name="nama_barang" class="java.lang.String"/>
+	<field name="colly" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[jumlah dalam colly]]></fieldDescription>
+	</field>
+	<field name="contact_tujuan" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="createby" class="java.lang.Integer">
+		<fieldDescription><![CDATA[User ID]]></fieldDescription>
+	</field>
+	<field name="createdate" class="java.sql.Timestamp">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="customer_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="harga" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="modifyby" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="modifydate" class="java.sql.Timestamp">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nama_barang" class="java.lang.String">
+		<fieldDescription><![CDATA[harus diisi]]></fieldDescription>
+	</field>
 	<field name="nama_cabang" class="java.lang.String"/>
 	<field name="nama_customer" class="java.lang.String"/>
 	<field name="nama_satuan" class="java.lang.String"/>
-	<field name="no_stt" class="java.lang.String"/>
-	<field name="note" class="java.lang.String"/>
-	<field name="pay_mode" class="java.lang.Integer"/>
-	<field name="potongan" class="java.math.BigDecimal"/>
-	<field name="qty" class="java.math.BigDecimal"/>
-	<field name="remain" class="java.math.BigDecimal"/>
-	<field name="satuan_id" class="java.lang.Integer"/>
-	<field name="telp_tujuan" class="java.lang.String"/>
-	<field name="tgl_kirim_est" class="java.util.Date"/>
-	<field name="tgl_stt" class="java.util.Date"/>
-	<field name="total_harga" class="java.math.BigDecimal"/>
-	<field name="urut" class="java.lang.Integer"/>
+	<field name="no_stt" class="java.lang.String">
+		<fieldDescription><![CDATA[MMYY99999
+
+MM = bulan
+YY = tahun
+99999 = auto inc]]></fieldDescription>
+	</field>
+	<field name="note" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="pay_mode" class="java.lang.Integer">
+		<fieldDescription><![CDATA[cara bayar
+lst_config id1]]></fieldDescription>
+	</field>
+	<field name="potongan" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[potongan total]]></fieldDescription>
+	</field>
+	<field name="qty" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[qty pengiriman, bisa dalam KG atau M2]]></fieldDescription>
+	</field>
+	<field name="remain" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[default remain = total_harga - potongan
+akan berkurang seiring pada waktu pembayaran.
+
+nilai remain ini yg nantinya digunakan untuk laporan piutang]]></fieldDescription>
+	</field>
+	<field name="satuan_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[satuan barang 
+lst_config id 3]]></fieldDescription>
+	</field>
+	<field name="telp_tujuan" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="tgl_kirim_est" class="java.sql.Date">
+		<fieldDescription><![CDATA[tgl kirim estimasi]]></fieldDescription>
+	</field>
+	<field name="tgl_stt" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="total_harga" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[total harga dari harga di mst_trans_det]]></fieldDescription>
+	</field>
+	<field name="urut" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="userinput" class="java.lang.String"/>
+	<field name="tujuan_id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nama_penerima" class="java.lang.String"/>
 	<variable name="tot_colly" class="java.math.BigDecimal" calculation="Sum">
 		<variableExpression><![CDATA[$F{col_det}]]></variableExpression>
 	</variable>
@@ -84,10 +155,10 @@ ORDER BY a.tgl_stt, a.no_stt
 	</group>
 	<title>
 		<band height="80">
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="96" y="40" width="144" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{username}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{username}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="40" width="96" height="20"/>
@@ -99,30 +170,30 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Waktu:]]></text>
 			</staticText>
-			<textField pattern="dd-MMM-yyyy [HH:mm:ss]" isBlankWhenNull="true" hyperlinkType="None">
+			<textField pattern="dd-MMM-yyyy [HH:mm:ss]" isBlankWhenNull="true">
 				<reportElement x="96" y="60" width="144" height="20"/>
 				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[new Date()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="0" width="96" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Laporan:]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="96" y="0" width="265" height="20"/>
 				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Surat Tanda Terima (STT) Detail"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Surat Tanda Terima (STT) Detail"]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="20" width="96" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Periode:]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement x="96" y="20" width="265" height="20"/>
 				<textElement verticalAlignment="Middle" markup="none"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{beg_date} + " s/d " + $P{end_date}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{beg_date} + " s/d " + $P{end_date}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -165,7 +236,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<text><![CDATA[Nama Pengirim]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="659" y="0" width="72" height="20"/>
+				<reportElement x="816" y="0" width="72" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -191,7 +262,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<text><![CDATA[No STT]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="369" y="0" width="162" height="20"/>
+				<reportElement x="526" y="0" width="162" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -204,7 +275,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<text><![CDATA[Nama Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="531" y="0" width="58" height="20"/>
+				<reportElement x="688" y="0" width="58" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -217,7 +288,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<text><![CDATA[Qty]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="731" y="0" width="108" height="20"/>
+				<reportElement x="888" y="0" width="108" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -230,7 +301,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<text><![CDATA[Harga]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="589" y="0" width="70" height="20"/>
+				<reportElement x="746" y="0" width="70" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -242,64 +313,84 @@ ORDER BY a.tgl_stt, a.no_stt
 				</textElement>
 				<text><![CDATA[Satuan]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="369" y="0" width="157" height="20"/>
+				<box padding="2">
+					<topPen lineWidth="1.0" lineStyle="Solid"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Nama Penerima]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="20">
+		<band height="22">
 			<elementGroup/>
-			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true" hyperlinkType="None">
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement isPrintRepeatedValues="false" x="131" y="0" width="81" height="20" printWhenGroupChanges="nostt"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$F{tgl_stt}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tgl_stt}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true">
 				<reportElement isPrintRepeatedValues="false" x="212" y="0" width="157" height="20" printWhenGroupChanges="nostt"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{nama_customer}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_customer}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0" hyperlinkType="None">
-				<reportElement x="659" y="0" width="72" height="20"/>
+			<textField pattern="#,##0">
+				<reportElement x="816" y="0" width="72" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{col_det}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{col_det}]]></textFieldExpression>
 			</textField>
-			<textField hyperlinkType="None">
-				<reportElement x="369" y="0" width="162" height="20"/>
+			<textField>
+				<reportElement x="526" y="0" width="162" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{nama_barang}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_barang}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,###0.###;(#,###0.###)" hyperlinkType="None">
-				<reportElement x="531" y="0" width="58" height="20"/>
+			<textField pattern="#,###0.###;(#,###0.###)">
+				<reportElement x="688" y="0" width="58" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{qty}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{qty}]]></textFieldExpression>
 			</textField>
-			<textField hyperlinkType="None">
-				<reportElement x="589" y="0" width="70" height="20"/>
+			<textField>
+				<reportElement x="746" y="0" width="70" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{nama_satuan}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_satuan}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.00#" hyperlinkType="None">
-				<reportElement x="731" y="0" width="108" height="20"/>
+			<textField pattern="#,##0.00#">
+				<reportElement x="888" y="0" width="108" height="20"/>
 				<box padding="2"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{harga}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{harga}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
-				<reportElement isPrintRepeatedValues="false" x="30" y="0" width="100" height="20" printWhenGroupChanges="nostt"/>
+			<textField isBlankWhenNull="true">
+				<reportElement isPrintRepeatedValues="false" x="31" y="0" width="100" height="20" printWhenGroupChanges="nostt"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{no_stt}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{no_stt}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="None">
-				<reportElement isPrintRepeatedValues="false" x="-1" y="0" width="31" height="20" isRemoveLineWhenBlank="true" printWhenGroupChanges="nostt"/>
+			<textField isBlankWhenNull="true">
+				<reportElement isPrintRepeatedValues="false" x="0" y="0" width="31" height="20" isRemoveLineWhenBlank="true" printWhenGroupChanges="nostt"/>
 				<box padding="3"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle" lineSpacing="Single" markup="none"/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{nostt_group}]]></textFieldExpression>
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{nostt_group}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="369" y="0" width="157" height="20"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{nama_penerima}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<summary>
 		<band height="33">
-			<textField hyperlinkType="None">
-				<reportElement x="659" y="4" width="72" height="20"/>
+			<textField>
+				<reportElement x="816" y="4" width="72" height="20"/>
 				<box>
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -309,10 +400,10 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{tot_colly}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{tot_colly}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.00#" hyperlinkType="None">
-				<reportElement x="731" y="4" width="108" height="20"/>
+			<textField pattern="#,##0.00#">
+				<reportElement x="888" y="4" width="108" height="20"/>
 				<box padding="2">
 					<topPen lineWidth="1.0" lineStyle="Solid"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid"/>
@@ -322,7 +413,7 @@ ORDER BY a.tgl_stt, a.no_stt
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{tot_harga}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{tot_harga}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
